--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,11 +3,11 @@
     <div class="footer-content">
       <div class="footer-logo">
         <a routerLink="/">
-          <img
+          <!-- <img
             src="assets/logo-white.svg"
             alt="SkillMatch AI"
             class="footer-logo-img"
-          />
+          /> -->
           <span class="footer-logo-text">SkillMatch AI</span>
         </a>
         <p class="footer-slogan">
